@@ -968,6 +968,10 @@ class LoginForm {
 		$titleObj = SpecialPage::getTitleFor( 'Userlogin' );
 
 		if ( $this->mType == 'signup' ) {
+			global $wgLivePasswordStrengthChecks;
+			if ( $wgLivePasswordStrengthChecks ) {
+				$wgOut->addPasswordSecurity( 'wpPassword2', 'wpRetype' );
+			}
 			$template = new UsercreateTemplate();
 			$q = 'action=submitlogin&type=signup';
 			$linkq = 'type=login';
